--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env dev\"",
-    "build": "webpack --env production"
+    "build": "webpack --config webpack.config.js --env production",
+    "lint:js": "eslint app/ webpack.*.js --cache"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,10 @@
     "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.14.11",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "eslint": "^4.17.0",
+    "eslint-loader": "^1.9.0"
+  },
+  "dependencies": {
   }
 }
