--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-loader": "^1.9.0",
     "exec": "^0.2.1",
     "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.14.11",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "eslint": "^4.17.0",
-    "eslint-loader": "^1.9.0"
+    "webpack-merge": "^4.1.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
