--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.0.0",
+    "css-loader": "^0.28.9",
     "eslint": "^4.17.0",
     "eslint-loader": "^1.9.0",
     "exec": "^0.2.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.0",
+    "precss": "^3.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
