--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^4.17.0",
     "eslint-loader": "^1.9.0",
     "exec": "^0.2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
