--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-loader": "^2.1.0",
     "precss": "^3.1.0",
     "sass-loader": "^6.0.6",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.20.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
